--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A Debt Tracker Developed in Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Bahram Bagher <bjbagher@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.24.41",
+    "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.15",
     "gatsby-plugin-manifest": "^2.4.22",
     "gatsby-plugin-offline": "^3.2.23",
@@ -13,13 +13,30 @@
     "gatsby-plugin-sharp": "^2.6.26",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.12",
+    "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-syntax-jsx": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@testing-library/cypress": "^6.0.0",
+    "@types/jest": "^26.0.10",
+    "axe-core": "^4.0.1",
+    "babel-jest": "^26.3.0",
+    "babel-preset-gatsby": "^0.5.5",
+    "cypress": "^4.12.1",
+    "cypress-axe": "^0.8.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.4.0",
+    "prettier": "2.0.5",
+    "start-server-and-test": "^1.11.3",
+    "tslint-react": "^5.0.0"
   },
   "keywords": [
     "gatsby"
@@ -32,7 +49,9 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "cy:open": "cypress open",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
   },
   "repository": {
     "type": "git",
